project-management-service/compile_output.txt

> Task :compileJava FAILED
C:\Users\jerem\www\project-management-service\src\main\java\com\kleff\projectmanagementservice\buisnesslayer\project\ProjectServiceImpl.java:252: error: method removeCollaborator in interface CollaboratorService cannot be applied to given types;
                collaboratorService.removeCollaborator(collaborator.getProjectId(), collaborator.getUserId());
                                   ^
  required: String,String,String
  found:    String,String
  reason: actual and formal argument lists differ in length
1 error

[Incubating] Problems report is available at: file:///C:/Users/jerem/www/project-management-service/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\jerem\www\project-management-service\src\main\java\com\kleff\projectmanagementservice\buisnesslayer\project\ProjectServiceImpl.java:252: error: method removeCollaborator in interface CollaboratorService cannot be applied to given types;
                  collaboratorService.removeCollaborator(collaborator.getProjectId(), collaborator.getUserId());
                                     ^
    required: String,String,String
    found:    String,String
    reason: actual and formal argument lists differ in length
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
